--- a/index.html
+++ b/index.html
@@ -22,6 +22,32 @@
             padding: 1rem;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header h1 {
+            margin: 0 auto;
+        }
+
+        .admin-controls {
+            display: none;
+            position: relative;
+        }
+
+        .admin-controls.visible {
+            display: block;
+        }
+
+        .admin-btn {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-left: 1rem;
         }
 
         .search-container {
@@ -85,6 +111,45 @@
             transform: translateY(-5px);
         }
 
+        .script-content {
+            display: none;
+            margin-top: 1rem;
+            background: #333;
+            padding: 1rem;
+            border-radius: 4px;
+        }
+
+        .script-content.visible {
+            display: block;
+        }
+
+        .view-script-btn {
+            background: #4a4a4a;
+            color: white;
+            border: none;
+            padding: 0.5rem;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 0.5rem;
+            width: 100%;
+        }
+
+        .edit-script-btn {
+            display: none;
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 0.5rem;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 0.5rem;
+            width: 100%;
+        }
+
+        .edit-script-btn.visible {
+            display: block;
+        }
+
         /* Admin Panel Styles */
         .admin-panel {
             display: none;
@@ -145,7 +210,11 @@
 </head>
 <body>
     <header class="header">
+        <div></div>
         <h1>Scripts de Roblox</h1>
+        <div class="admin-controls">
+            <button class="admin-btn" id="adminPanelBtn">Panel de Administrador</button>
+        </div>
     </header>
 
     <div class="search-container">
@@ -165,38 +234,41 @@
     <!-- Admin Panel -->
     <div class="overlay" id="overlay"></div>
     <div class="admin-panel" id="adminPanel">
-        <h2>Panel de Administrador</h2>
+        <h2 id="adminPanelTitle">Panel de Administrador</h2>
         <form class="admin-form" id="adminForm">
-            <input type="text" placeholder="Nombre del Script" required>
-            <textarea placeholder="Código del Script" rows="10" required></textarea>
-            <select required>
+            <input type="text" name="scriptName" placeholder="Nombre del Script" required>
+            <textarea name="scriptCode" placeholder="Código del Script" rows="10" required></textarea>
+            <select name="scriptCategory" required>
                 <option value="">Seleccionar Categoría</option>
                 <option value="combate">Combate</option>
                 <option value="farmeo">Farmeo</option>
             </select>
-            <button type="submit">Publicar Script</button>
+            <input type="hidden" name="scriptId" value="">
+            <button type="submit" id="submitBtn">Publicar Script</button>
         </form>
     </div>
 
     <script>
-        // Datos de ejemplo (en una aplicación real, esto vendría de una base de datos)
+        let isAdmin = false;
         let scripts = [
             {
+                id: 1,
                 name: "Script de Combate Básico",
                 code: "print('Combat Script')",
                 category: "combate"
             },
             {
+                id: 2,
                 name: "Auto Farm XP",
                 code: "print('Farm Script')",
                 category: "farmeo"
             }
         ];
 
-        // Funcionalidad de búsqueda y filtrado
         const searchInput = document.getElementById('searchInput');
         const scriptsContainer = document.getElementById('scriptsContainer');
         const categoryButtons = document.querySelectorAll('.category-btn');
+        const adminControls = document.querySelector('.admin-controls');
         let currentCategory = 'all';
 
         function renderScripts() {
@@ -208,32 +280,56 @@
             });
 
             scriptsContainer.innerHTML = filteredScripts.map(script => `
-                <div class="script-card">
+                <div class="script-card" data-id="${script.id}">
                     <h3>${script.name}</h3>
                     <p>Categoría: ${script.category}</p>
-                    <pre><code>${script.code}</code></pre>
+                    <button class="view-script-btn" onclick="toggleScript(${script.id})">Ver Script</button>
+                    <button class="edit-script-btn ${isAdmin ? 'visible' : ''}" onclick="editScript(${script.id})">Editar Script</button>
+                    <div class="script-content" id="script-${script.id}">
+                        <pre><code>${script.code}</code></pre>
+                    </div>
                 </div>
             `).join('');
         }
 
-        searchInput.addEventListener('input', renderScripts);
+        function toggleScript(id) {
+            const content = document.getElementById(`script-${id}`);
+            content.classList.toggle('visible');
+        }
 
-        categoryButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                categoryButtons.forEach(btn => btn.classList.remove('active'));
-                button.classList.add('active');
-                currentCategory = button.dataset.category;
-                renderScripts();
-            });
-        });
-
-        // Panel de administrador
-        searchInput.addEventListener('input', function(e) {
-            if (e.target.value === '676637') {
+        function editScript(id) {
+            const script = scripts.find(s => s.id === id);
+            if (script) {
+                document.getElementById('adminPanelTitle').textContent = 'Editar Script';
+                document.getElementById('submitBtn').textContent = 'Actualizar Script';
+                const form = document.getElementById('adminForm');
+                form.scriptName.value = script.name;
+                form.scriptCode.value = script.code;
+                form.scriptCategory.value = script.category;
+                form.scriptId.value = script.id;
                 document.getElementById('overlay').classList.add('visible');
                 document.getElementById('adminPanel').classList.add('visible');
-                e.target.value = '';
             }
+        }
+
+        searchInput.addEventListener('input', function(e) {
+            if (e.target.value === '676637' && !isAdmin) {
+                isAdmin = true;
+                adminControls.classList.add('visible');
+                e.target.value = '';
+                renderScripts(); // Re-render para mostrar botones de edición
+            } else {
+                renderScripts();
+            }
+        });
+
+        document.getElementById('adminPanelBtn').addEventListener('click', function() {
+            document.getElementById('adminPanelTitle').textContent = 'Nuevo Script';
+            document.getElementById('submitBtn').textContent = 'Publicar Script';
+            document.getElementById('adminForm').reset();
+            document.getElementById('adminForm').scriptId.value = '';
+            document.getElementById('overlay').classList.add('visible');
+            document.getElementById('adminPanel').classList.add('visible');
         });
 
         document.getElementById('overlay').addEventListener('click', function() {
@@ -244,16 +340,43 @@
         document.getElementById('adminForm').addEventListener('submit', function(e) {
             e.preventDefault();
             const formData = new FormData(e.target);
-            const newScript = {
-                name: e.target[0].value,
-                code: e.target[1].value,
-                category: e.target[2].value
-            };
-            scripts.push(newScript);
+            const scriptId = formData.get('scriptId');
+            
+            if (scriptId) {
+                // Editar script existente
+                const index = scripts.findIndex(s => s.id.toString() === scriptId);
+                if (index !== -1) {
+                    scripts[index] = {
+                        id: parseInt(scriptId),
+                        name: formData.get('scriptName'),
+                        code: formData.get('scriptCode'),
+                        category: formData.get('scriptCategory')
+                    };
+                }
+            } else {
+                // Crear nuevo script
+                const newScript = {
+                    id: scripts.length + 1,
+                    name: formData.get('scriptName'),
+                    code: formData.get('scriptCode'),
+                    category: formData.get('scriptCategory')
+                };
+                scripts.push(newScript);
+            }
+
             renderScripts();
             document.getElementById('overlay').classList.remove('visible');
             document.getElementById('adminPanel').classList.remove('visible');
             e.target.reset();
+        });
+
+        categoryButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                categoryButtons.forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+                currentCategory = button.dataset.category;
+                renderScripts();
+            });
         });
 
         // Renderizar scripts iniciales
