--- a/index.html
+++ b/index.html
@@ -1,1 +1,386 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scripts Roblox</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
 
+        body {
+            background: #1a1a1a;
+            color: white;
+        }
+
+        .header {
+            background: #2c2c2c;
+            padding: 1rem;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header h1 {
+            margin: 0 auto;
+        }
+
+        .admin-controls {
+            display: none;
+            position: relative;
+        }
+
+        .admin-controls.visible {
+            display: block;
+        }
+
+        .admin-btn {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-left: 1rem;
+        }
+
+        .search-container {
+            padding: 1rem;
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+        }
+
+        #searchInput {
+            padding: 0.5rem;
+            width: 300px;
+            border: none;
+            border-radius: 4px;
+            background: #333;
+            color: white;
+        }
+
+        .categories {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            padding: 1rem;
+        }
+
+        .category-btn {
+            padding: 0.5rem 1rem;
+            border: none;
+            border-radius: 4px;
+            background: #4a4a4a;
+            color: white;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        .category-btn:hover {
+            background: #666;
+        }
+
+        .category-btn.active {
+            background: #007bff;
+        }
+
+        .scripts-container {
+            padding: 1rem;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 1rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .script-card {
+            background: #2c2c2c;
+            padding: 1rem;
+            border-radius: 8px;
+            transition: transform 0.3s;
+        }
+
+        .script-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .script-content {
+            display: none;
+            margin-top: 1rem;
+            background: #333;
+            padding: 1rem;
+            border-radius: 4px;
+        }
+
+        .script-content.visible {
+            display: block;
+        }
+
+        .view-script-btn {
+            background: #4a4a4a;
+            color: white;
+            border: none;
+            padding: 0.5rem;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 0.5rem;
+            width: 100%;
+        }
+
+        .edit-script-btn {
+            display: none;
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 0.5rem;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 0.5rem;
+            width: 100%;
+        }
+
+        .edit-script-btn.visible {
+            display: block;
+        }
+
+        /* Admin Panel Styles */
+        .admin-panel {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: #2c2c2c;
+            padding: 2rem;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 500px;
+            z-index: 1000;
+        }
+
+        .admin-panel.visible {
+            display: block;
+        }
+
+        .admin-form input, 
+        .admin-form select, 
+        .admin-form textarea {
+            width: 100%;
+            padding: 0.5rem;
+            margin: 0.5rem 0;
+            background: #333;
+            border: none;
+            border-radius: 4px;
+            color: white;
+        }
+
+        .admin-form button {
+            width: 100%;
+            padding: 0.5rem;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 1rem;
+        }
+
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.7);
+            z-index: 999;
+        }
+
+        .overlay.visible {
+            display: block;
+        }
+    </style>
+</head>
+<body>
+    <header class="header">
+        <div></div>
+        <h1>Scripts de Roblox</h1>
+        <div class="admin-controls">
+            <button class="admin-btn" id="adminPanelBtn">Panel de Administrador</button>
+        </div>
+    </header>
+
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Buscar scripts...">
+    </div>
+
+    <div class="categories">
+        <button class="category-btn active" data-category="all">Todos</button>
+        <button class="category-btn" data-category="combate">Combate</button>
+        <button class="category-btn" data-category="farmeo">Farmeo</button>
+    </div>
+
+    <div class="scripts-container" id="scriptsContainer">
+        <!-- Los scripts se cargarán aquí dinámicamente -->
+    </div>
+
+    <!-- Admin Panel -->
+    <div class="overlay" id="overlay"></div>
+    <div class="admin-panel" id="adminPanel">
+        <h2 id="adminPanelTitle">Panel de Administrador</h2>
+        <form class="admin-form" id="adminForm">
+            <input type="text" name="scriptName" placeholder="Nombre del Script" required>
+            <textarea name="scriptCode" placeholder="Código del Script" rows="10" required></textarea>
+            <select name="scriptCategory" required>
+                <option value="">Seleccionar Categoría</option>
+                <option value="combate">Combate</option>
+                <option value="farmeo">Farmeo</option>
+            </select>
+            <input type="hidden" name="scriptId" value="">
+            <button type="submit" id="submitBtn">Publicar Script</button>
+        </form>
+    </div>
+
+    <script>
+        let isAdmin = false;
+        let scripts = [
+            {
+                id: 1,
+                name: "Script de Combate Básico",
+                code: "print('Combat Script')",
+                category: "combate"
+            },
+            {
+                id: 2,
+                name: "Auto Farm XP",
+                code: "print('Farm Script')",
+                category: "farmeo"
+            }
+        ];
+
+        const searchInput = document.getElementById('searchInput');
+        const scriptsContainer = document.getElementById('scriptsContainer');
+        const categoryButtons = document.querySelectorAll('.category-btn');
+        const adminControls = document.querySelector('.admin-controls');
+        let currentCategory = 'all';
+
+        function renderScripts() {
+            const searchTerm = searchInput.value.toLowerCase();
+            const filteredScripts = scripts.filter(script => {
+                const matchesSearch = script.name.toLowerCase().includes(searchTerm);
+                const matchesCategory = currentCategory === 'all' || script.category === currentCategory;
+                return matchesSearch && matchesCategory;
+            });
+
+            scriptsContainer.innerHTML = filteredScripts.map(script => `
+                <div class="script-card" data-id="${script.id}">
+                    <h3>${script.name}</h3>
+                    <p>Categoría: ${script.category}</p>
+                    <button class="view-script-btn" onclick="toggleScript(${script.id})">Ver Script</button>
+                    <button class="edit-script-btn ${isAdmin ? 'visible' : ''}" onclick="editScript(${script.id})">Editar Script</button>
+                    <div class="script-content" id="script-${script.id}">
+                        <pre><code>${script.code}</code></pre>
+                    </div>
+                </div>
+            `).join('');
+        }
+
+        function toggleScript(id) {
+            const content = document.getElementById(`script-${id}`);
+            content.classList.toggle('visible');
+        }
+
+        function editScript(id) {
+            const script = scripts.find(s => s.id === id);
+            if (script) {
+                document.getElementById('adminPanelTitle').textContent = 'Editar Script';
+                document.getElementById('submitBtn').textContent = 'Actualizar Script';
+                const form = document.getElementById('adminForm');
+                form.scriptName.value = script.name;
+                form.scriptCode.value = script.code;
+                form.scriptCategory.value = script.category;
+                form.scriptId.value = script.id;
+                document.getElementById('overlay').classList.add('visible');
+                document.getElementById('adminPanel').classList.add('visible');
+            }
+        }
+
+        searchInput.addEventListener('input', function(e) {
+            if (e.target.value === '676637' && !isAdmin) {
+                isAdmin = true;
+                adminControls.classList.add('visible');
+                e.target.value = '';
+                renderScripts(); // Re-render para mostrar botones de edición
+            } else {
+                renderScripts();
+            }
+        });
+
+        document.getElementById('adminPanelBtn').addEventListener('click', function() {
+            document.getElementById('adminPanelTitle').textContent = 'Nuevo Script';
+            document.getElementById('submitBtn').textContent = 'Publicar Script';
+            document.getElementById('adminForm').reset();
+            document.getElementById('adminForm').scriptId.value = '';
+            document.getElementById('overlay').classList.add('visible');
+            document.getElementById('adminPanel').classList.add('visible');
+        });
+
+        document.getElementById('overlay').addEventListener('click', function() {
+            this.classList.remove('visible');
+            document.getElementById('adminPanel').classList.remove('visible');
+        });
+
+        document.getElementById('adminForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const formData = new FormData(e.target);
+            const scriptId = formData.get('scriptId');
+            
+            if (scriptId) {
+                // Editar script existente
+                const index = scripts.findIndex(s => s.id.toString() === scriptId);
+                if (index !== -1) {
+                    scripts[index] = {
+                        id: parseInt(scriptId),
+                        name: formData.get('scriptName'),
+                        code: formData.get('scriptCode'),
+                        category: formData.get('scriptCategory')
+                    };
+                }
+            } else {
+                // Crear nuevo script
+                const newScript = {
+                    id: scripts.length + 1,
+                    name: formData.get('scriptName'),
+                    code: formData.get('scriptCode'),
+                    category: formData.get('scriptCategory')
+                };
+                scripts.push(newScript);
+            }
+
+            renderScripts();
+            document.getElementById('overlay').classList.remove('visible');
+            document.getElementById('adminPanel').classList.remove('visible');
+            e.target.reset();
+        });
+
+        categoryButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                categoryButtons.forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+                currentCategory = button.dataset.category;
+                renderScripts();
+            });
+        });
+
+        // Renderizar scripts iniciales
+        renderScripts();
+    </script>
+</body>
+</html>
